# agent-tools

./: .gitgnore  LICENSE.txt  README.md  agent-tools.code-workspace  pyproject.toml  requirements.txt
src/agent/: __about__.py  __init__.py  agent_toolcall.py
src/agent/prompts/: __init__.py  file_sys_prompt_json.py
src/agent/tools/: __init__.py  file_tools_json.py
src/main/: __init__.py  main.py
src/utils/: __init__.py  llm.py  mdextract.py  projectTypes.py
