[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kaihaan", email = "64160099+kaihaan@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kaihaan/agent-tools#readme"
Issues = "https://github.com/kaihaan/agent-tools/issues"
Source = "https://github.com/kaihaan/agent-tools"

[tool.hatch.version]
path = "src/agent_tools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/agent_tools tests}"

[tool.coverage.run]
source_pkgs = ["agent_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/agent_tools/__about__.py",
]

[tool.coverage.paths]
agent_tools = ["src/agent_tools", "*/agent-tools/src/agent_tools"]
tests = ["tests", "*/agent-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
